@@ -9,6 +9,7 @@ unzip tenthumuc.zip
 netstat -an |grep :80 |wc -l: xem có bao nhiêu kết nối đến cổng 80
 mkdir: tạo thư mục mới
 rm -rf tenthumuc/tenfile: xóa tệp tin
+CATALINA_OPTS="-Xmx1g -XX:PermSize=256M -XX:MaxPermSize=500m" -- Tăng bộ nhớ Tomcat khi bị PermGem, viết trong Catalina.sh(Linux) hoặc Catalina.bat(Window)
 
 Oracle
 ===========
